--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "migrate": "prisma migrate dev",
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.3.0"
   }
 }
