--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "todosexpress",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "migrate": "prisma migrate dev",
-    "start": "nodemon ./bin/www"
+    "start": "nodemon bin/www.js"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.3",
     "@prisma/client": "^5.3.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "graphql": "^16.8.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
