--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:8*!FBy3yV&XxLQV@db.qpnjjtgjpncbwuvddqrq.supabase.co:5432/postgres"
+DATABASE_URL=""
+JWT_SECRET_KEY=""
