--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@apollo/server": "^4.9.3",
     "@prisma/client": "^5.3.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "graphql": "^16.8.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "vercel": "^32.2.5"
   },
