--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "graphql": "^16.8.0",
+    "graphql-middleware": "^6.1.35",
+    "graphql-tools": "^9.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "vercel": "^32.2.5"
